--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-highcharts": "^16.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "highcharts": "^11.2.0",
     "jspdf": "^2.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
